# testovoe_kalibri

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.qtcreator/: CMakeLists.txt.user.efb22ae
client/: CMakeLists.txt  device_client.cpp  device_client.h  main.cpp
server/: CMakeLists.txt  main.cpp  network_server.cpp  network_server.h  server_window.cpp  server_window.h  settings_dialog.cpp  settings_dialog.h
