cmake_minimum_required(VERSION 3.16)
project(QtTelecomClient LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Network)

set(CLIENT_SOURCES
    main.cpp
    device_client.cpp
)

set(CLIENT_HEADERS
    device_client.h
)

qt_add_executable(QtTelecomClient ${CLIENT_SOURCES} ${CLIENT_HEADERS})
target_link_libraries(QtTelecomClient PRIVATE Qt6::Core Qt6::Network)

install(TARGETS QtTelecomClient DESTINATION bin)